--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,3 +1,186 @@
-<p>
-  home-page works!
-</p>
+<!-- Debut du contenu de la page d'accueil -->
+
+<!-- Debut haut de page -->
+
+<div class="section no-pad-bot" id="index-banner" class="grey lighten-3" >
+<div class="container">
+  <br><br>
+  <h1 class="header center deep-purple-text">STARTUINO</h1>
+  <div class="row center">
+    <h2 class="header col s12 light"> <strong>Ici... nous découvrons l'apprentissage, alors que nous pensions tout connaitre !</strong></h2>
+  </div>
+  <div class="row center">
+    <a href="" id="download-button" class="btn-large waves-effect">Go !</a>
+  </div>
+  <br><br>
+
+</div>
+</div>
+
+<!-- Fin haut de page -->
+<br>
+<br>
+<div class="row">
+  <div class="col s12 m8 l8 offset-m2 offset-l2">
+<div class="video-container" >
+  <iframe width="100%" height="700" src="http://www.youtube.com/embed/dALnhPvqqgg?rel=0&amp;AutoPlay=1" frameborder="0" allowfullscreen></iframe>
+</div>
+</div>
+</div>
+
+<!-- Objectifs du site : Je programme/Je modelise/J'imprime-->
+
+
+
+ 
+
+<!--   -->
+
+
+<!-- Je programme -->
+
+<!-- Je modelise en 3d-->
+<!-- J'imprime en 3d-->
+<br>
+<br>
+
+<div class="grey lighten-3" class="center-align" class="row" >
+
+
+<div class="col s12 m4 l4">
+  <div class="card">
+    <div class="card-image">
+      <img class="test" src="assets/img/objectifs/jeCode.png">
+      
+    </div>
+    <div  class="card-content">
+      <p>Cette première étape permettra de découvrir l'univers arduino (environnement de développement, langage de programmation, montage électronique, domaine d'utilisation et bien d'autres encore... 
+          Bien évidemment, je ne vais pas faire de vous des experts, mais vous aurez à disposition toutes les bases nécessaires afin d'avancer en toute autonomie.cebook</p>
+    </div>
+    <div class="card-action">
+      <a class="white purple-text" href="#">Je programme</a>
+    </div>
+  </div>
+</div>
+
+
+
+<div class="col s12 m4 l4">
+  <div class="card">
+    <div class="card-image">
+      <img class="test" src="assets/img/objectifs/tinkercad.png">
+      
+    </div>
+    <div  class="card-content">
+      <p>La partie modélisation est la plus créative de ce programme numérique pour devenir un McMaker (dédicace à McGyver). Nous aborderons le prototypage de votre objet avant sa conception.
+          L'apprentissage se fera avec logiciel simple et polyvalent qui est Thinkercad. Open source, cette application en ligne nécessitera uniquement une inscription en ligne !</p>
+    </div>
+    <div class="card-action">
+      <a class="white purple-text" href="#">Je modelise en 3d</a>
+    </div>
+  </div>
+</div>
+
+
+
+<div class="col s12 m4 l4">
+  <div class="card">
+    <div class="card-image">
+      <img class="test" src="assets/img/objectifs/3dprinter.png">
+      
+    </div>
+    <div  class="card-content">
+      <p>L'impression 3d est sans doute, celle qui nécessitera un peu d'investissement de votre part en allant visiter un "FabLab" (les laboratoires de fabrications numériques), près de chez vous, afin de fabriquer / imprimer réellement la conception que vous avez imaginé.
+          En effet, une fois que nous aurons modelisé votre objet, il faudra étudier les techniques d'impressions... </p>
+    </div>
+    <div class="card-action">
+      <a class="white purple-text" href="#">J'imprime en 3d</a>
+    </div>
+  </div>
+</div>
+
+
+</div>
+
+<!--   -->
+  
+<div class="white" class="row">
+<div class="col s12 m8 l2 offset-m2 offset-l5">
+    <div class="card-panel white z-depth-1">
+      <div class="row valign-wrapper">
+        <div class="col s2 m4 l4">
+            <a class="btn-floating btn-large purple pulse"><i class="material-icons">share</i></a> 
+        </div>
+        
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+<!--  -->
+
+<div class="white"class="center-align" class="row">
+
+    <div class="col s12 m6 l3" > 
+      <div class="center-align">
+        <a href="https://www.facebook.com/startuino.france.5">
+          <img id="sizeIcon" class="responsive-img" src="assets/img/IconSocial/facebook.png" alt="logo facebook">
+        </a>
+      </div>
+      <div class="center-align">
+        <p>Facebook</p>
+      </div>
+    </div>
+
+    <div class="col s12 m6 l3">
+      <div class="center-align">
+        <a href="https://www.youtube.com/channel/UC5EcU4mHYG-0VpzFKEFRPog">
+        <img id="sizeIcon" class="responsive-img" src="assets/img/IconSocial/youtube.png" alt="logo youtube">
+        </a>
+      </div>
+      <div class="center-align">
+        <p>Youtube</p>
+      </div>
+    </div>
+
+    <div class="col s12 m6 l3">
+      <div class="center-align">
+        <a href="">
+        <img id="sizeIcon" class="responsive-img" src="assets/img/IconSocial/instagram.png" alt="logo instagram">
+        </a>
+      </div>
+      <div class="center-align">
+        <p>Instagram</p>
+      </div>
+    </div>
+
+    <div class="col s12 m6 l3">
+      <div class="center-align">
+        <a href="https://twitter.com/startuinofrance">
+        <img id="sizeIcon" class="responsive-img" src="assets/img/IconSocial/twitter.png" alt="logo twitter">
+       </a>
+      </div>
+      <div class="center-align">
+        <p>Twitter</p>
+      </div>
+     </div>
+   </div>
+
+<!-- Objectifs du site : Je programme/Je modelise/J'imprime-->
+
+
+<!-- Parallax - Je programme -->
+
+
+<!-- Fin Parallax -->
+
+
+
+<!-- Fin du contenu de la page d'accueil -->
+
+
+
+
